<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.bedir.qrcode.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:gravity="center|top"
        android:textSize="18sp"
        android:text="@string/main_scan_or_generate_message_textview"
         />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">

        <Button
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:text="@string/main_scan_button_text"
            android:layout_gravity="center"
            android:id="@+id/main_scan_btn"
            android:onClick="onClickScanButton"/>

        <TextView
            android:text="@string/generate_manual_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:padding="30dp"/>

        <Button
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:id="@+id/main_generate_manual_btn"
            android:layout_gravity="center"
            android:text="@string/main_generate_button_text"
            android:onClick="onClickGenerateManualButton"/>
        <TextView
            android:text="@string/generate_url_textview"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:padding="20dp"/>

        <Button
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:id="@+id/main_generate_url_btn"
            android:layout_gravity="center"
            android:text="@string/main_generate_url_button_text"
            android:onClick="onClickGenerateUrlButton"/>
    </LinearLayout>

</LinearLayout>
